--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -2,8 +2,11 @@
 {% block title %}<title> {{ title }} </title>{% endblock title %}
 {% block content %}
   <!-- класс py-5 создает отступы сверху и снизу блока -->
-  <div class="container py-5">     
-    <h1>Последние обновления на сайте</h1>
+  <div class="container py-5">
+    <h1>Лев Толстой – зеркало русской революции.</h1>
+    <p>
+      Группа тайных поклонников графа.
+    </p>
     <article>
       <ul>
         <li>
@@ -21,7 +24,6 @@
         и Бабарыкинымъ, ругалъ Сержпутовскому и ничего не сдѣлалъ, вотъ 3 упрека, которыя дѣлаю с
         ебѣ за нынѣшній день. (3)
       </p>
-      <a href="group_list.html">все записи группы</a>
     </article>
     <hr>
     <article>
@@ -45,7 +47,6 @@
         накрылъ Крыжановскій, что, признаюсь, было мнѣ не совсѣмъ пріятно. Упрекаю себя за 
         безхарактерность, что не высидѣлъ дома, и зa праздность цѣлаго дня. Это главный пунктъ. (2)
       </p>
-      <a href="group_list.html">все записи группы</a>
     </article>
     <hr>
     <article>
@@ -65,8 +66,7 @@
         Гембичомъ, потомъ болталъ съ Шубинымъ и съ Сашей Горчаковымъ. — Исключая праздности, 
         днемъ своимъ очень доволенъ. (1)
       </p>
-      <a href="group_list.html">все записи группы</a>
     </article>
     <!-- под последним постом нет линии -->
-  </div>  
+  </div>
 {% endblock content %}
