--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -14,8 +14,10 @@
             Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
         </ul>
-        <p>{{ post.text }}</p>    
-        <a href="{% url 'posts:group_list' %}">все записи группы</a>
+        <p>{{ post.text }}</p>
+        {% if post.group %}
+        <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
+        {% endif %}
       </article>
     <!-- под последним постом нет линии -->
     {% if not forloop.last %}<hr>{% endif %}
