--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}<title> {{ title }} </title>{% endblock title %}
 {% block content %}
-  <!-- класс py-5 создает отступы сверху и снизу блока -->
   <div class="container py-5">
     <h1>Последние обновления на сайте</h1>
     {% for post in posts %}
@@ -16,10 +15,9 @@
         </ul>
         <p>{{ post.text }}</p>
         {% if post.group %}
-        <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
+        <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
         {% endif %}
       </article>
-    <!-- под последним постом нет линии -->
     {% if not forloop.last %}<hr>{% endif %}
     {% endfor %} 
   </div>
