--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}<title> {{ title }} </title>{% endblock title %}
+{% block title %} Последние обновления на сайте {% endblock %}
 {% block content %}
   <div class="container py-5">
     <h1>Последние обновления на сайте</h1>
@@ -13,12 +13,12 @@
             Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
         </ul>
-        <p>{{ post.text }}</p>
+        <p>{{ post.text|linebreaks }}</p>
         {% if post.group %}
-        <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+          <a href="{% url 'posts:group_list' post.group.slug %}">#{{ post.group.title }}</a>
         {% endif %}
       </article>
     {% if not forloop.last %}<hr>{% endif %}
     {% endfor %} 
   </div>
-{% endblock content %}
+{% endblock %}
