--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -11,13 +12,13 @@
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    {% block title %}{% endblock title %}
+    <title> {% block title %}{% endblock %} </title>
   </head>
   <body>
-    {% include 'includes/header.html' %}
-    <main>
-      {% block content %}{% endblock content %}
-    </main>
-    {% include 'includes/footer.html' %}
+    <header> {% include 'includes/header.html' %} </header>
+    <main> {% block content %}{% endblock %} </main>
+    <footer class="border-top text-center py-3"> 
+      {% include 'includes/footer.html' %}
+    </footer>
   </body>
 </html>
