Правки по code review #2

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -16,6 +16,8 @@
         <p>{{ post.text|linebreaks }}</p>
         {% if post.group %}
           <a href="{% url 'posts:group_list' post.group.slug %}">#{{ post.group.title }}</a>
+        {% else %}
+          <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
         {% endif %}
       </article>
     {% if not forloop.last %}<hr>{% endif %}
