--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -4,7 +4,7 @@
   <div class="container py-5">
     <h1>Последние записи группы {{ group.title }}</h1>
     <p class="font-weight-light">{{ group.description|linebreaks }}</p>
-    {% for post in posts %}
+    {% for post in page_obj %}
       <article>
         <ul>
           <li>
@@ -19,4 +19,5 @@
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %} 
   </div>
+  {% include 'posts/includes/paginator.html' %}
 {% endblock %}
