--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="container py-5">
     <h1>Последние обновления на сайте</h1>
-    {% for post in posts %}
+    {% for post in page_obj %}
       <article>
         <ul>
           <li>
@@ -23,4 +23,5 @@
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %} 
   </div>
+  {% include 'posts/includes/paginator.html' %}
 {% endblock %}
