--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -8,7 +8,6 @@
           <li class="list-group-item">
             Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
-          <!-- если у поста есть группа -->
           <li class="list-group-item">
           {% if post.group %}
             <a href="{% url 'posts:group_list' post.group.slug %}">#{{ post.group.title }}</a>
@@ -20,17 +19,22 @@
             Автор: {{ post.author.get_full_name }}
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
-            Всего постов автора:  <span >{{ post.author.posts.count }}</span>
+            Всего публикаций автора:  <span >{{ post.author.posts.count }}</span>
           </li>
           <li class="list-group-item">
             <a href="{% url 'posts:profile' post.author %}">
-              все посты пользователя
+              все публикации пользователя
             </a>
           </li>
         </ul>
       </aside>
       <article class="col-12 col-md-9">
         <p>{{ post.text }}</p>
+        {% if post.author.username == user.username %}
+          <a class="btn btn-primary" href="{% url 'posts:post_edit' post.pk %}">
+            редактировать запись
+          <a/>
+        {% endif %}
       </article>
     </div>
   </div>
