--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -7,18 +7,21 @@
       <article>
         <ul>
           <li>
-            Автор: {{ post.author.get_full_name }}
+            Автор: <a href="{% url 'posts:profile' post.author %}">{{ post.author.get_full_name }}</a>
           </li>
           <li>
             Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
         </ul>
         <p>{{ post.text|linebreaks }}</p>
+        <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
+        <p>
         {% if post.group %}
           <a href="{% url 'posts:group_list' post.group.slug %}">#{{ post.group.title }}</a>
         {% else %}
           <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
         {% endif %}
+        </p>
       </article>
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %} 
