--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -2,8 +2,8 @@
 {% block title %} Профайл пользователя {{ author.get_full_name }}{% endblock %}
 {% block content %}
   <div class="container py-5">        
-    <h1>Все посты пользователя {{ author.get_full_name }}</h1>
-    <h3>Всего постов: {{ profile_posts.count }}</h3>
+    <h1>Все публикации пользователя {{ author.get_full_name }}</h1>
+    <h3>Всего публикаций: {{ profile_posts.count }}</h3>
     {% for post in page_obj %}
       <article>
         <ul>
