--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -2,7 +2,7 @@
 {% block title %} Публикации сообщества {{ group.title }} {% endblock %}
 {% block content %}
   <div class="container py-5">
-    <h1>Последние публикации сообщества {{ group.title }}</h1>
+    <h1>{{ group.title }}</h1>
     <p class="font-weight-light">{{ group.description|linebreaks }}</p>
     {% for post in page_obj %}
       <article>
