--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -13,24 +13,19 @@
             <a href="{% url 'posts:group_list' post.group.slug %}">#{{ post.group.title }}</a>
           {% else %}
             <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
-          {% endif %}   
+          {% endif %}
           </li>
           <li class="list-group-item">
-            Автор: {{ post.author.get_full_name }}
+            Автор: <a href="{% url 'posts:profile' post.author %}">{{ post.author.get_full_name }}</a>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Всего публикаций автора:  <span >{{ post.author.posts.count }}</span>
           </li>
-          <li class="list-group-item">
-            <a href="{% url 'posts:profile' post.author %}">
-              все публикации пользователя
-            </a>
-          </li>
         </ul>
       </aside>
       <article class="col-12 col-md-9">
-        <p>{{ post.text }}</p>
-        {% if post.author.username == user.username %}
+        <p>{{ post.text|linebreaks }}</p>
+        {% if post.author == user %}
           <a class="btn btn-primary" href="{% url 'posts:post_edit' post.pk %}">
             редактировать запись
           <a/>
