--- a/yatube/templates/users/password_reset_confirm.html
+++ b/yatube/templates/users/password_reset_confirm.html
@@ -5,46 +5,31 @@
 
 {% if validlink %}
 
-  <div class="container py-5"> 
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="card">
-        <div class="card-header">
-          Введите новый пароль
+  <div class="container py-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 p-5">
+        <div class="card">
+          <div class="card-header">
+            Введите новый пароль
+          </div>
+          <div class="card-body">
+            <form method="post"
+              {% if action_url %}
+                action="{% url action_url %}"
+              {% endif %}>
+            {% csrf_token %}
+            {% include 'includes/user_form.html' %}
+              <div class="col-md-6 offset-md-4">
+                <button type="submit" class="btn btn-primary">
+                  Назначить новый пароль
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="card-body">
-          <form method="post"
-            {% if action_url %}
-              action="{% url action_url %}"
-            {% endif %}>
-          {% csrf_token %}
-            <div class="form-group row my-3 p-3">
-              <label for="id_new_password1">
-                Новый пароль        
-                <span class="required text-danger">*</span>        
-              </label>    
-              <input type="password" name="new_password1" class="form-control" required id="id_new_password1">      
-              <small id="id_new_password1-help" class="form-text text-muted">
-                <ul><li>Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</li><li>Ваш пароль должен содержать как минимум 8 символов.</li><li>Ваш пароль не может быть одним из широко распространённых паролей.</li><li>Ваш пароль не может состоять только из цифр.</li></ul>
-              </small>      
-            </div>
-            <div class="form-group row my-3 p-3">
-              <label for="id_new_password2">
-                Подтверждение нового пароля        
-                <span class="required text-danger">*</span>        
-              </label>    
-              <input type="password" name="new_password2" class="form-control" required id="id_new_password2">      
-            </div>
-            <div class="col-md-6 offset-md-4">
-              <button type="submit" class="btn btn-primary">
-                Назначить новый пароль
-              </button>
-            </div>
-          </form>
-        </div> <!-- card body -->
-      </div> <!-- card -->
-    </div> <!-- col -->
-  </div> <!-- row -->
+      </div>
+    </div>
+  </div>
 
 {% else %}
   <div class="row justify-content-center">
@@ -55,10 +40,10 @@
         </div>
         <div class="card-body">
           <p>Ссылка сброса пароля содержит ошибку или устарела.</p>
-        </div> <!-- card body -->
-      </div> <!-- card -->
-    </div> <!-- col -->
-  </div> <!-- row -->
+        </div>
+      </div>
+    </div>
+  </div>
 {% endif %}
 
 {% endblock %}
