Добавлена возможность прикреплять изображения

--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -13,9 +13,9 @@
           <div class="card-body">
             {% include 'includes/errors.html' %}
             {% if form.instance.pk %}  
-              <form method="post" action="{% url 'posts:post_edit' form.instance.pk %}">
+              <form method="post" enctype="multipart/form-data" action="{% url 'posts:post_edit' form.instance.pk %}">
             {% else %}   
-              <form method="post" action="{% url 'posts:post_create' %}">
+              <form method="post" enctype="multipart/form-data" action="{% url 'posts:post_create' %}">
             {% endif %}
             {% csrf_token %}
             {% include 'includes/user_form.html' %}
