--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %} Пост {{ post }}{% endblock %}
 {% block content %}
   <div class="container py-5">
@@ -24,6 +25,9 @@
         </ul>
       </aside>
       <article class="col-12 col-md-9">
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
         <p>{{ post.text|linebreaks }}</p>
         {% if post.author == user %}
           <a class="btn btn-primary" href="{% url 'posts:post_edit' post.pk %}">
