--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -34,6 +34,7 @@
             редактировать запись
           <a/>
         {% endif %}
+        {% include 'posts/includes/comment.html' %}
       </article>
     </div>
   </div>
