--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block title %} Последние обновления на сайте {% endblock %}
+{% block title %} Публикации избранных авторов {% endblock %}
 {% block content %}
   <div class="container py-5">
     {% include 'posts/includes/switcher.html' %}
-    <h1>Последние обновления на сайте</h1>
+    <h1>Публикации избранных авторов</h1>
     {% for post in page_obj %}
       {% include 'posts/includes/post_card.html' %}
       {% if not forloop.last %}<hr>{% endif %}
