--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -2,7 +2,7 @@
 {% block title %} Публикации избранных авторов {% endblock %}
 {% block content %}
   <div class="container py-5">
-    {% include 'posts/includes/switcher.html' %}
+    {% include 'posts/includes/switcher.html' with follow='True' %}
     <h1>Публикации избранных авторов</h1>
     {% for post in page_obj %}
       {% include 'posts/includes/post_card.html' %}
