--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -2,12 +2,15 @@
 {% block title %} Последние обновления на сайте {% endblock %}
 {% block content %}
   <div class="container py-5">
-    {% include 'posts/includes/switcher.html' %}
+    {% include 'posts/includes/switcher.html' with index='True' %}
     <h1>Последние обновления на сайте</h1>
-    {% for post in page_obj %}
-      {% include 'posts/includes/post_card.html' %}
-      {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %}
+    {% load cache %}
+    {% cache 20 index_page page_obj.number %}
+      {% for post in page_obj %}
+        {% include 'posts/includes/post_card.html' %}
+        {% if not forloop.last %}<hr>{% endif %}
+      {% endfor %}
+    {% endcache %} 
     {% include 'posts/includes/paginator.html' %}
   </div>
 {% endblock %}
